2004-11-10  DindinX  <dindinx@gimp.org>

	* plug-ins/gfig/gfig-dialog.c: moved the tool options closer to the
	tools and made the dialog a bit smaller.

2004-11-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mail.c: added a menu icon (compiled-in).

2004-11-10  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-handlers.c
	(gimp_display_shell_resolution_changed_handler): if dot_for_dot is
	off, resolution change has the same effect as size change, so call
	gimp_display_shell_size_changed_handler(). Fixes display garbage.

2004-11-10  Michael Natterer  <mitch@gimp.org>

	* plug-ins/winicon/icodialog.[ch]
	* plug-ins/winicon/icoload.[ch]
	* plug-ins/winicon/icosave.[ch]
	* plug-ins/winicon/main.[ch]: call progress functions
	unconditionally; removed global "interactive" variable; use
	standard strings for open/save progress messages; gui, indentation
	& coding style cleanup; untabified.

2004-11-10  Michael Schumacher <schumaml@cvs.gnome.org>

	* plug-ins/winsnap/winsnap.c: applied a patch from Sven Neumann
	with some minor modifications. Fixes bug #157612
	Removed some unused variables.

2004-11-10  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimputils.c (gimp_escape_uline): "Since: GIMP 2.2".

2004-11-10  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: set the padding-mode to custom
	color if a custom color is choosen. Fixes bug #157844.

2004-11-10  Michael Natterer  <mitch@gimp.org>

	* plug-ins/dbbrowser/plugin-browser.c (browser_dialog_new): fixed
	capitalization of notebook tab label.

2004-11-10  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimputils.[ch]: renamed gimp_flags_get_value() to
	gimp_flags_get_first_value(). Reordered functions so enum and
	flags functions are grouped together. Added missing docs.

	* libgimpbase/gimpbase.def: changed accordingly.

2004-11-09  Jay Cox  <jaycox@gimp.org>

	* plug-ins/common/psd.c: Skip resources with unknown signatures